change last link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <h3>2017</h3>
             <ul>
               <li class="css1 flexbox1">
-                <a href="https://vk.com/videos-101965347?section=album_466" title="video VK">Знакомство с СSS Flexbox</a></li>
+                <a href="https://www.youtube.com/playlist?list=PLqHlAwsJRxAPs942EdJ1akeWpOg2yatiM" title="video">Знакомство с СSS Flexbox</a></li>
               <li class="css1">
                 <a href="http://css-live.ru/articles/css-gridy-prishli-nasovsem.html">CSS-гриды пришли насовсем</a></li>
               <li class="git1">
