--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="css1 grid1">
+                <a href="https://www.mozilla.org/en-US/developer/css-grid/">CSS-гриды, специальная демо-страница Mozilla с базовыми примерами и обучающими материалами</a></li>
+              <li>
+                <a href="https://events.yandex.ru/lib/talks/3083/" title="video">Технические особенности создания сайта</a></li>
               <li class="css1 flexbox1">
                 <a href="https://www.youtube.com/playlist?list=PLqHlAwsJRxAPs942EdJ1akeWpOg2yatiM" title="video">Знакомство с СSS Flexbox</a></li>
               <li class="css1">
