--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           <h3>2017</h3>
             <ul>
               <li class="css1 grid1">
+                <a href="https://cloudfour.com/thinks/first-css-grid-layout/">Первый практический опыт на гридах: Тайлер Стика сначала верстает на флексах, а потом переделывает красиво</a></li>
+              <li class="css1 grid1">
                 <a href="https://www.mozilla.org/en-US/developer/css-grid/">CSS-гриды, специальная демо-страница Mozilla с базовыми примерами и обучающими материалами</a></li>
               <li>
                 <a href="https://events.yandex.ru/lib/talks/3083/" title="video">Технические особенности создания сайта</a></li>
