--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li>
+                <a href="https://webformyself.com/kak-sozdat-internet-magazin-na-wordpress-bez-lishnix-zamorochek/">Как создать интернет-магазин на WordPress без лишних заморочек</a></li>
               <li class="css1 grid1">
                 <a href="https://cloudfour.com/thinks/first-css-grid-layout/">Первый практический опыт на гридах: Тайлер Стика сначала верстает на флексах, а потом переделывает красиво</a></li>
               <li class="css1 grid1">
