--- a/index.html
+++ b/index.html
@@ -6,42 +6,7 @@
     <meta name="description" content="My personal draft">
     <meta name="author" content="Yevgen Farasevych">
     <title>Home page</title>
-    <link rel="stylesheet" href="styles.css"><!-- the type attribute is not necessary -->
-    <style type="text/css">
-		.header {
-			background-color: ;
-			text-align: center;
-			text-decoration: none;
-		}
-		
-		header h1 a:hover {
-			text-decoration: none;
-		}
-		
-		.footer {
-			text-align: center;
-		}
-		
-		body {
-			background: #cbecdf;
-      font-family: monospace; /*'Open Sans', sans-serif*/
-      font-size: 1em;
-		}
-		
-		a {			
-			text-decoration: none; /* Убираем подчеркивание у ссылок */
-		}
-
-		a:hover { 
-			cursor:pointer;			
-			color: black;
-		}
-		
-		.logo {
-			color: black;
-			text-decoration: none;
-		}
-    </style>
+    <link rel="stylesheet" href="style.css"><!-- the type attribute is not necessary -->
   </head>
   <body>
     <!--BEGIN layout-->
