--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           <h3>2017</h3>
             <ul>
               <li class="css1">
+                <a href="https://webformyself.com/css-eksperimenty-s-polem-i-knopkoj-poiska/">CSS эксперименты с полем и кнопкой поиска</a></li>
+              <li class="css1">
                 <a href="http://css.yoksel.ru/a11y-for-logotypes/">Как лучше всего верстать логотипы на сайте</a></li>
               <li>              
                 <a href="https://webformyself.com/kak-sozdat-internet-magazin-na-wordpress-bez-lishnix-zamorochek/">Как создать интернет-магазин на WordPress без лишних заморочек</a></li>
