add new paragraf web sites

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         </ul>
       </section>
       <!-- end portfolio -->
+      <!-- begin web sites -->
+      <div class="web schools">
+        <h2>Web sites</h2>
+        <ul>
+          <li><a href="https://webformyself.com/">webformyself.com</a></li>
+        </ul>
+      </div>
+      <!-- end web ssites -->
       <!--BEGIN mooc-->
       <section id="mooc" class="section mooc">
         <h2>MOOC</h2>
