--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h2>Web sites</h2>
         <ul>
           <li><a href="https://webformyself.com/">webformyself.com</a></li>
+          <li><a href="http://css.yoksel.ru/" title="Про CSS">css.yoksel.ru</a></li>
         </ul>
       </div>
       <!-- end web ssites -->
@@ -63,6 +64,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="css1">
+                  <a href="https://webformyself.com/zolotye-pravila-po-napisaniyu-chistogo-css/">Золотые правила по написанию чистого CSS</a></li>
               <li class="css1">
                 <a href="https://webformyself.com/css-eksperimenty-s-polem-i-knopkoj-poiska/">CSS эксперименты с полем и кнопкой поиска</a></li>
               <li class="css1">
