rename to index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section id="portfolio">
         <h2>Portfolio</h2>
         <ul>
-          <li><a href="/portfolio/01--PSD-to-HTML/01--PSD-to-HTML.html" title="2017-03-20">My first page (01--PSD-to-HTML)</a></li>
+          <li><a href="/portfolio/01--PSD-to-HTML/index.html" title="2017-03-20">My first page (01--PSD-to-HTML)</a></li>
         </ul>
       </section>
       <!-- end portfolio -->
@@ -34,8 +34,8 @@
       <div class="web schools">
         <h2>Web sites</h2>
         <ul>
-          <li><a href="https://webformyself.com/">webformyself.com</a></li>
           <li><a href="http://css.yoksel.ru/" title="Про CSS">css.yoksel.ru</a></li>
+          <li><a href="https://webformyself.com/">webformyself.com</a></li>
         </ul>
       </div>
       <!-- end web ssites -->
@@ -64,8 +64,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li>
+                <a href="http://yoksel.github.io/html-tree/">Генератор HTML-дерева</a></li>
               <li class="css1">
-                  <a href="https://webformyself.com/zolotye-pravila-po-napisaniyu-chistogo-css/">Золотые правила по написанию чистого CSS</a></li>
+                <a href="https://webformyself.com/zolotye-pravila-po-napisaniyu-chistogo-css/">Золотые правила по написанию чистого CSS</a></li>
               <li class="css1">
                 <a href="https://webformyself.com/css-eksperimenty-s-polem-i-knopkoj-poiska/">CSS эксперименты с полем и кнопкой поиска</a></li>
               <li class="css1">
