--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         </ul>
       </div>
       <!-- end web ssites -->
+      <section>
+        <h2>YouTube</h2>
+        <ul>
+          <li class="youtube1">
+            <a href="https://www.youtube.com/channel/UC7f5bVxWsm3jlZIPDzOMcAg">Хауди Хо™ - Просто о мире IT!</a></li>
+        </ul>
+      </section>
       <!--BEGIN mooc-->
       <section id="mooc" class="section mooc">
         <h2>MOOC</h2>
@@ -64,6 +71,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="video not-learned">
+                <a href="https://www.youtube.com/watch?v=Wi18m_FtBTc&feature=youtu.be&t=1589">Конкурс #1 по Front-End ► Обзор вторых 20 работ!</a></li>
               <li>
                 <a href="http://yoksel.github.io/html-tree/">Генератор HTML-дерева</a></li>
               <li class="css1">
