--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="start1">
+                <a href="http://frontender.info/a-baseline-for-front-end-developers/">Необходимый минимум для фронтенд-разработчика</a></li>
               <li class="video not-learned">
                 <a href="https://www.youtube.com/watch?v=Wi18m_FtBTc&feature=youtu.be&t=1589">Конкурс #1 по Front-End ► Обзор вторых 20 работ!</a></li>
               <li>
@@ -378,6 +380,7 @@
         </details>
       </section>
       <!--END log-->
+
       <!--BEGIN websites-->
       <section id="websites" class="section">
         <h2>Websites</h2>	
@@ -393,6 +396,7 @@
         </ul>
       </section>
       <!--END websites-->
+
       <!--BEGIN learning-->
       <section id="learning">
         <h2>Learning</h2>
@@ -417,22 +421,17 @@
         </ul>
         <h4>JS</h4>
         <ul>
-          <li>
-            <a href="https://javascript30.com/" 
-            title="Build 30 things in 30 days with 30 tutorials">30 Day Vanilla JS Coding Challenge by Wes Bos</a></li>
-          <li>
-            <a href="http://learn.javascript.ru/" title="Современный учебник Javascript">Современный учебник Javascript</a></li>
-          <li>
-            <a href="https://ru.hexlet.io/" title="hexlet.io">hexlet.io</a></li>
-          <li>
-            <a href="https://www.youtube.com/watch?v=H6G63NKRSi8&list=PL363QX7S8MfSxcHzvkNEqMYbOyhLeWwem" 
-            title="видеокурс Sorax по основам JavaScript" >Видеокурс Sorax по основам JavaScript (Youtube)</a></li>
-          <li>
-            <a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" 
-            title="Youtube">React Club (React, redux lessons in Russian on Youtube)</a></li>
-          <li>
-            <a href="https://www.codewars.com/" 
-            title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
+          <li><a href="https://www.paulirish.com/2010/10-things-i-learned-from-the-jquery-source/">10 Things I Learned From the jQuery Source</a></li>
+          <li><a href="https://github.com/rmurphey/js-assessment">Тестовая оценка владения JS</a></li>
+          <li class="books1"><a href="http://eloquentjavascript.net/">Eloquent JavaScript</a></li>
+          <li class="books1"><a href="https://karmazzin.gitbooks.io/eloquentjavascript_ru/content/">Выразительный Javascript</a></li>
+          <li class="books1"><a href="https://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742">JavaScript: Сильные стороны</a></li>
+          <li><a href="https://javascript30.com/" title="Build 30 things in 30 days with 30 tutorials">30 Day Vanilla JS Coding Challenge by Wes Bos</a></li>
+          <li><a href="http://learn.javascript.ru/" title="Современный учебник Javascript">Современный учебник Javascript</a></li>
+          <li><a href="https://ru.hexlet.io/" title="hexlet.io">hexlet.io</a></li>
+          <li><a href="https://www.youtube.com/watch?v=H6G63NKRSi8&list=PL363QX7S8MfSxcHzvkNEqMYbOyhLeWwem" title="видеокурс Sorax по основам JavaScript" >Видеокурс Sorax по основам JavaScript (Youtube)</a></li>
+          <li><a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" title="Youtube">React Club (React, redux lessons in Russian on Youtube)</a></li>
+          <li><a href="https://www.codewars.com/" title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
           <li>JavaScript: The Definitive Guide — читать обязательно. Лучше раза три. А потом держать под рукой как справочник.</li>
         </ul>
         <h4>Design</h4>
