--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="video">
+                <a href="https://www.youtube.com/watch?v=UXx6ZwHeVUQ&t=2s" title="youtube">HTML Academy - Лекция 3 Фотошоп для верстальщика</a></li>
               <li class="start1">
                 <a href="http://frontender.info/a-baseline-for-front-end-developers/">Необходимый минимум для фронтенд-разработчика</a></li>
               <li class="video not-learned">
