--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a href="https://howdns.works/">A fun and colorful explanation of how DNS works.</a></li>
               <li class="video">
                 <a href="https://www.youtube.com/watch?v=UXx6ZwHeVUQ&t=2s" title="youtube">HTML Academy - Лекция 3 Фотошоп для верстальщика</a></li>
               <li class="start1">
