--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="video">
+                <a href="https://www.youtube.com/watch?v=MWJKwn_gKR4&feature=youtu.be&t=1">Жми сюда!</a></li>
               <li class="not-learned"><a href="https://github.com/nicothin/web-design">О чём должен помнить веб-дизайнер</a></li>
               <li><a href="https://howdns.works/">A fun and colorful explanation of how DNS works.</a></li>
               <li class="video">
