--- a/index.html
+++ b/index.html
@@ -410,9 +410,9 @@
       <section id="learning">
         <h2>Learning</h2>
         <ul>
-          <li>
-            <a href="http://software.hixie.ch/utilities/js/live-dom-viewer/"
-            >Live DOM Viewer</a></li>
+          <li><a href="https://developer.mozilla.org/ru/">developer.mozilla.org</a></li>
+          <li><a href="https://coursehunters.net/">coursehunters</a></li>
+          <li><a href="http://software.hixie.ch/utilities/js/live-dom-viewer/">Live DOM Viewer</a></li>
           <li><a href="http://javarush.ru/cs50.html" title="javarush.ru">CS50 на русском</a></li>
         </ul>
         <h4>HTML</h4>
