add hover properties for a tag

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div class="web schools">
         <h2>Web sites</h2>
         <ul>
+          <li><a href="https://webref.ru/ref">Справочник CSS и HTML</a></li>
           <li><a href="http://webdesign-master.ru/">WebDesign Master Уроки создания сайтов</a></li>
           <li><a href="https://www.artlebedev.ru/tools/typograf/">Typograf (artlebedev.ru)</a></li>
           <li><a href="http://mdash.ru/demo.html">Typograf Muraveva</a></li>
