--- a/index.html
+++ b/index.html
@@ -395,7 +395,6 @@
       <section id="websites" class="section">
         <h2>Websites</h2>	
         <ul>
-          <li><a href="https://resilientwebdesign.com/" title="2017-02-12">Resilient Web Design</a></li>
           <li><a href="http://marinin.xyz/" title="2017-02-11">marinin.xyz</a></li>
           <li><a href="https://letsencrypt.org/">letsencrypt.org (https)</a></li>
           <li><a href="https://zapier.com/">zapier.com</a></li>
@@ -406,6 +405,13 @@
         </ul>
       </section>
       <!--END websites-->
+      
+      <section id="books" class="section">
+        <h2>Books</h2>
+        <ul>
+          <li><a href="https://resilientwebdesign.com/" title="2017-02-12">Resilient Web Design</a></li>
+        </ul>
+      </section>
 
       <!--BEGIN learning-->
       <section id="learning">
