--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned">
+                <a href="https://hackernoon.com/rems-and-ems-and-why-you-probably-dont-need-them-664b9ce1e09f">rems and ems, and why you probably don’t need them</a></li>
+              <li class="grid1 not-learned">
+                <a href="http://cssgridgarden.com/">GRID GARDEN</a></li>
               <li class="video">
                 <a href="https://www.youtube.com/watch?v=MWJKwn_gKR4&feature=youtu.be&t=1">Жми сюда!</a></li>
               <li class="not-learned"><a href="https://github.com/nicothin/web-design">О чём должен помнить веб-дизайнер</a></li>
@@ -395,6 +399,7 @@
       <section id="websites" class="section">
         <h2>Websites</h2>	
         <ul>
+          <li><a href="https://about.gitlab.com/">gitlab</a></li>
           <li><a href="http://marinin.xyz/" title="2017-02-11">marinin.xyz</a></li>
           <li><a href="https://letsencrypt.org/">letsencrypt.org (https)</a></li>
           <li><a href="https://zapier.com/">zapier.com</a></li>
