--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
           <h3>2017</h3>
             <ul>
               <li class="not-learned">
+                <a href="https://habrahabr.ru/post/142486/">Подробно о свойстве float</a></li>
+              <li class="not-learned">
                 <a href="https://hackernoon.com/rems-and-ems-and-why-you-probably-dont-need-them-664b9ce1e09f">rems and ems, and why you probably don’t need them</a></li>
               <li class="grid1 not-learned">
                 <a href="http://cssgridgarden.com/">GRID GARDEN</a></li>
