--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li>
+                <a href="https://www.w3schools.com/howto/howto_css_dropdown.asp">Dropdown Menu in Navbar</a></li>
               <li class="not-learned">
                 <a href="https://habrahabr.ru/post/142486/">Подробно о свойстве float</a></li>
               <li class="not-learned">
