--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="video"><a href="https://www.youtube.com/watch?v=_nrQbO3iXgI">Основы CSS - Руководство для самых маленьких</a></li>
               <li>
                 <a href="https://www.w3schools.com/howto/howto_css_dropdown.asp">Dropdown Menu in Navbar</a></li>
               <li class="not-learned">
