--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li>
+                <a href="http://vavik96.com/krutye-slajdery-na-chistom-css-bez-ispolzovaniya-jqueryjavascript/">Крутые слайдеры на чистом CSS без использования jQuery/Javascript</a></li>
+              <li>
+                <a href="https://codeconvey.com/pure-css-image-slider/">Pure CSS Image Slider Without Javascript Slideshow</a></li>
               <li class="video"><a href="https://www.youtube.com/watch?v=_nrQbO3iXgI">Основы CSS - Руководство для самых маленьких</a></li>
               <li>
                 <a href="https://www.w3schools.com/howto/howto_css_dropdown.asp">Dropdown Menu in Navbar</a></li>
