--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
         <h2>Web sites</h2>
         <ul>
           <li><a href="https://webref.ru/ref">Справочник CSS и HTML</a></li>
+          <li><a href="https://htmlforum.io/">HTMLforum для разработчиков</a></li>
           <li><a href="http://webdesign-master.ru/">WebDesign Master Уроки создания сайтов</a></li>
           <li><a href="https://www.artlebedev.ru/tools/typograf/">Typograf (artlebedev.ru)</a></li>
           <li><a href="http://mdash.ru/demo.html">Typograf Muraveva</a></li>
           <li><a href="http://css.yoksel.ru/" title="Про CSS">css.yoksel.ru</a></li>
           <li><a href="https://webformyself.com/">webformyself.com</a></li>
+
         </ul>
       </div>
       <!-- end web ssites -->
@@ -75,6 +77,11 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="css1">
+                <a href="http://css.yoksel.ru/strelki-s-pomoshh-yu-svojstva-border/">Стрелки с помощью свойства border</a></li>
+              <li class="css1"><a href="http://codepen.io/yoksel/pen/dvVOYa">Arrows</a></li>
+              <li>
+                <a href="https://codepen.io/Yevge-n/pen/OmLezO">Creating arrow for dropdown</a></li>
               <li>
                 <a href="http://vavik96.com/krutye-slajdery-na-chistom-css-bez-ispolzovaniya-jqueryjavascript/">Крутые слайдеры на чистом CSS без использования jQuery/Javascript</a></li>
               <li>
@@ -408,6 +415,7 @@
       <section id="websites" class="section">
         <h2>Websites</h2>	
         <ul>
+          <li><a href="https://www.vis-design.com/" title="2017-04-11">Дизайн студия vis-design</a></li>
           <li><a href="https://about.gitlab.com/">gitlab</a></li>
           <li><a href="http://marinin.xyz/" title="2017-02-11">marinin.xyz</a></li>
           <li><a href="https://letsencrypt.org/">letsencrypt.org (https)</a></li>
