add 3 books names

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="grid1">
+                <a href="http://griddy.io/">Griddy для практики с гридами</a></li>
               <li class="css1">
                 <a href="http://css.yoksel.ru/strelki-s-pomoshh-yu-svojstva-border/">Стрелки с помощью свойства border</a></li>
               <li class="css1"><a href="http://codepen.io/yoksel/pen/dvVOYa">Arrows</a></li>
@@ -431,6 +433,9 @@
       <section id="books" class="section">
         <h2>Books</h2>
         <ul>
+          <li>Секреты CSS. Идеальные решения ежедневных задач (Леа Веру)</li>
+          <li>CSS: The Missing Manual / Новая большая книга CSS (Девид Макфарланд)</li>
+          <li>Отзывчивый веб-дизайн (Итан Маркотт)</li>
           <li><a href="https://resilientwebdesign.com/" title="2017-02-12">Resilient Web Design</a></li>
         </ul>
       </section>
@@ -476,6 +481,7 @@
         <ul>
           <li><a href="https://habrahabr.ru/post/312744/">Как я стала дизайнером за шесть месяцев</a></li>
         </ul>
+
         <article>
           <h4>Три составляющих обучения</h4>
           <details>
