--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned">
+                <a href="https://habrahabr.ru/post/202408/">Как сверстать веб-страницу. Часть 1</a></li>
               <li class="grid1">
                 <a href="http://griddy.io/">Griddy для практики с гридами</a></li>
               <li class="css1">
