--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <li><a href="https://howdns.works/">A fun and colorful explanation of how DNS works.</a></li>
               <li class="video">
                 <a href="https://www.youtube.com/watch?v=UXx6ZwHeVUQ&t=2s" title="youtube">HTML Academy - Лекция 3 Фотошоп для верстальщика</a></li>
-              <li class="start1">
+              <li class="not-learned">
                 <a href="http://frontender.info/a-baseline-for-front-end-developers/">Необходимый минимум для фронтенд-разработчика</a></li>
               <li class="video not-learned">
                 <a href="https://www.youtube.com/watch?v=Wi18m_FtBTc&feature=youtu.be&t=1589">Конкурс #1 по Front-End ► Обзор вторых 20 работ!</a></li>
