--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
           <h3>2017</h3>
             <ul>
               <li class="not-learned">
+                <a href="https://tuhub.ru/frontend/eshhyo-bolshe-o-tom-kak-rabotaet-flexbox-obyasnyaem-na-bolshih-krasochnyh-gif-kah/">Ещё больше о том как работает Flexbox — объясняем на больших, красочных GIF’ках</a></li>
+              <li class="not-learned">
+                <a href="http://us3.campaign-archive2.com/?u=2198e961288bea12428046a80&id=2e0e1a906f&e=e506319578">Полезная рассылка HTML Academy №37</a></li>
+              <li>
+                <a href="https://webformyself.com/minikurs/html5/index-subscribe.html">Практика HTML5 и CSS3 с нуля до результата за вечер</a></li>
+              <li class="not-learned">
                 <a href="https://habrahabr.ru/post/202408/">Как сверстать веб-страницу. Часть 1</a></li>
               <li class="grid1">
                 <a href="http://griddy.io/">Griddy для практики с гридами</a></li>
@@ -123,7 +129,7 @@
                 <a href="https://cloudfour.com/thinks/first-css-grid-layout/">Первый практический опыт на гридах: Тайлер Стика сначала верстает на флексах, а потом переделывает красиво</a></li>
               <li class="css1 grid1">
                 <a href="https://www.mozilla.org/en-US/developer/css-grid/">CSS-гриды, специальная демо-страница Mozilla с базовыми примерами и обучающими материалами</a></li>
-              <li>
+              <li class="not-learned">
                 <a href="https://events.yandex.ru/lib/talks/3083/" title="video">Технические особенности создания сайта</a></li>
               <li class="css1 flexbox1">
                 <a href="https://www.youtube.com/playlist?list=PLqHlAwsJRxAPs942EdJ1akeWpOg2yatiM" title="video">Знакомство с СSS Flexbox</a></li>
