--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned javascript1">
+                <a href="https://medium.freecodecamp.com/my-giant-javascript-basics-course-is-now-live-on-youtube-and-its-100-free-9020a21bbc27">Базовый видеокурс по JavaScript Бо Карнса бесплатно на YouTube: от JS-переменных до паттернов и основ React</a></li>
               <li class="not-learned">
                 <a href="https://tuhub.ru/frontend/eshhyo-bolshe-o-tom-kak-rabotaet-flexbox-obyasnyaem-na-bolshih-krasochnyh-gif-kah/">Ещё больше о том как работает Flexbox — объясняем на больших, красочных GIF’ках</a></li>
               <li class="not-learned">
