--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a href="http://jsbin.com/ahemer/17/edit?html,css,output">Песочница к видео "Слайдер на CSS" </a></li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=-sIJZd087G0" title="Sorax">Слайдер на CSS (YouTube)</a></li>
+              <li class="not-learned">
+                <a href="http://krekotun.ru/level-up.html">Как HTML-верстальщику поднять свой уровень</a></li>
               <li class="not-learned javascript1">
                 <a href="https://medium.freecodecamp.com/my-giant-javascript-basics-course-is-now-live-on-youtube-and-its-100-free-9020a21bbc27">Базовый видеокурс по JavaScript Бо Карнса бесплатно на YouTube: от JS-переменных до паттернов и основ React</a></li>
               <li class="not-learned">
