--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned"><a href="https://medium.com/@ABatickaya/senior-junior-7ac76e5d3285">Senior < Junior (Мой доклад о наставничестве на PiterCSS 5)</a></li>
+              <li class="not-learned"><a href="https://medium.com/russian/%D0%BF%D1%83%D1%82%D1%8C-%D0%BD%D0%B0%D1%81%D1%82%D0%B0%D0%B2%D0%BD%D0%B8%D0%BA%D0%B0-2001ab15f403">Путь наставника</a></li>
+              <li class="not-learned"><a href="http://css-live.ru/faq/put-verstalshhika.html">Путь верстальщика</a></li>
               <li><a href="http://jsbin.com/ahemer/17/edit?html,css,output">Песочница к видео "Слайдер на CSS" </a></li>
               <li>
                 <a href="https://www.youtube.com/watch?v=-sIJZd087G0" title="Sorax">Слайдер на CSS (YouTube)</a></li>
