--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li>
+                <a href="https://html5book.ru/pole-poiska-dlya-sayta/#part2">Поле поиска для сайта. Идеи для оформления</a></li>
               <li class="video">
                 <a href="https://www.youtube.com/watch?v=fIAokeTWgGU" title="moscowcss video">Недокументированные приемы CSS, Дмитрий Григоров</a></li>
               <li class="not-learned">
