--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned"><a href="https://medium.com/russian/%D0%BE%D1%82-%D0%BD%D1%83%D0%BB%D1%8F-%D0%B4%D0%BE-%D0%B3%D0%B5%D1%80%D0%BE%D1%8F-front-enda-%D1%87%D0%B0%D1%81%D1%82%D1%8C-1-f524d668f328">От нуля до героя фронтенда (Часть 1)</a></li>
+              <li><a href="https://medium.com/russian/%D0%BE%D1%82-%D0%BD%D1%83%D0%BB%D1%8F-%D0%B4%D0%BE-%D0%B3%D0%B5%D1%80%D0%BE%D1%8F-%D1%84%D1%80%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D0%B4%D0%B0-%D1%87%D0%B0%D1%81%D1%82%D1%8C-2-25f19e56eb29">От нуля до героя фронтенда (Часть 2)</a></li>
+              <li class="not-learned"><a href="https://medium.freecodecamp.com/from-zero-to-front-end-hero-part-1-7d4f7f0bff02">From Zero to Front-end Hero (Part 1)</a></li>
+              <li><a href="https://medium.freecodecamp.com/from-zero-to-front-end-hero-part-2-adfa4824da9b">From Zero to Front-end Hero (Part 2)</a></li>
+              <li><a href="http://prgssr.ru/development/obzor-sredstv-hraneniya-dannyh-na-klientskoj-storone.html">Обзор средств хранения данных на клиентской стороне</a></li>
+              <li><a href="https://habrahabr.ru/company/badoo/blog/320558/">33 способа ускорить ваш фронтенд в 2017 году</a></li>
+              <li class="not-learned"><a href="https://habrahabr.ru/post/306716/">Frontend-разработчики должны быть в теме всего</a></li>
+              <li class="not-learned"><a href="https://github.com/splincode/basework">материалы видеоуроков</a></li>
               <li>
                 <a href="https://html5book.ru/pole-poiska-dlya-sayta/#part2">Поле поиска для сайта. Идеи для оформления</a></li>
               <li class="video">
