--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div class="web schools">
         <h2>Web sites</h2>
         <ul>
+          <li><a href="https://www.fontsquirrel.com/">fontsquirrel</a></li>
           <li><a href="https://webref.ru/ref">Справочник CSS и HTML</a></li>
           <li><a href="https://htmlforum.io/">HTMLforum для разработчиков</a></li>
           <li><a href="http://webdesign-master.ru/">WebDesign Master Уроки создания сайтов</a></li>
@@ -41,7 +42,6 @@
           <li><a href="http://mdash.ru/demo.html">Typograf Muraveva</a></li>
           <li><a href="http://css.yoksel.ru/" title="Про CSS">css.yoksel.ru</a></li>
           <li><a href="https://webformyself.com/">webformyself.com</a></li>
-
         </ul>
       </div>
       <!-- end web ssites -->
@@ -77,6 +77,9 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a href="http://site4business.net/css/kak-podklyuchit-shrift.html">Как подключить шрифт на сайт: 3 разных способа + готовый CSS шаблон</a></li>
+              <li><a href="https://html5book.ru/specsimvoly-html/">Спецсимволы HTML</a></li>
+              <li><a href="https://habrahabr.ru/post/126207/">Геометрические фигуры на CSS</a></li>
               <li><a href="https://medium.com/russian/frontend-dev-%D1%85%D0%BE%D1%80%D0%BE%D1%88%D0%B8%D0%B9-%D0%BF%D0%BB%D0%BE%D1%85%D0%BE%D0%B9-%D0%B7%D0%BB%D0%BE%D0%B9-%D1%87%D0%B0%D1%81%D1%82%D1%8C-1-%D1%85%D0%BE%D1%80%D0%BE%D1%88%D0%B8%D0%B9-%D0%BF%D1%83%D1%82%D1%8C-865b640d5d18">Frontend Dev: хороший, плохой, злой. Часть 1: Хороший путь</a></li>
               <li class="not-learned"><a href="https://medium.com/russian/%D0%BE%D1%82-%D0%BD%D1%83%D0%BB%D1%8F-%D0%B4%D0%BE-%D0%B3%D0%B5%D1%80%D0%BE%D1%8F-front-enda-%D1%87%D0%B0%D1%81%D1%82%D1%8C-1-f524d668f328">От нуля до героя фронтенда (Часть 1)</a></li>
               <li><a href="https://medium.com/russian/%D0%BE%D1%82-%D0%BD%D1%83%D0%BB%D1%8F-%D0%B4%D0%BE-%D0%B3%D0%B5%D1%80%D0%BE%D1%8F-%D1%84%D1%80%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D0%B4%D0%B0-%D1%87%D0%B0%D1%81%D1%82%D1%8C-2-25f19e56eb29">От нуля до героя фронтенда (Часть 2)</a></li>
