--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a class="article__gulp" href="https://frontender.info/no-need-to-grunt-take-a-gulp-of-fresh-air/#gulpkakglotoksvezhegovozduhaposlegrunt" title="2017-04-24">Gulp — как глоток свежего воздуха после Grunt</a></li>
               <li><a href="http://site4business.net/css/kak-podklyuchit-shrift.html">Как подключить шрифт на сайт: 3 разных способа + готовый CSS шаблон</a></li>
               <li><a href="https://html5book.ru/specsimvoly-html/">Спецсимволы HTML</a></li>
               <li><a href="https://habrahabr.ru/post/126207/">Геометрические фигуры на CSS</a></li>
