--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       <!-- end portfolio -->
       <!-- begin web sites -->
       <div class="web schools">
-        <h2>Web sites</h2>
+        <h2>Info</h2>
         <ul>
-          <li><a href="https://www.fontsquirrel.com/">fontsquirrel</a></li>
+          <li><a href="http://nicothin.github.io/sublime-text/sublime-text-3-hotkeys.html" title="2017-04-26">Шпаргалка ниндзя Sublime Text 3</a></li>
+          <li><a href="https://www.fontsquirrel.com/">fontsquirrel (Шрифты)</a></li>
           <li><a href="https://webref.ru/ref">Справочник CSS и HTML</a></li>
           <li><a href="https://htmlforum.io/">HTMLforum для разработчиков</a></li>
           <li><a href="http://webdesign-master.ru/">WebDesign Master Уроки создания сайтов</a></li>
