--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a class="video__templates" href="https://www.youtube.com/watch?v=VwzcEEAfNCs"  title="video 2017-04-30">019. Шаблонизаторы (templates) - Сергей Бережной</a></li>
               <li><a href="http://krekotun.ru/ui-developer-skills#templates" title="2017-04-24">Что должен знать HTML-верстальщик?</a></li>
               <li><a class="article__nodejs" href="http://blog.teamtreehouse.com/install-node-js-npm-windows">How to Install Node.js® and NPM on Windows</a></li>
-              <li><a class="video__templating" href="https://www.youtube.com/watch?v=s9iTE5aqiac" title="video 2017-04-24">Шаблонизаторы - Сергей Бережной</a></li>
+              <li><a class="video__templates" href="https://www.youtube.com/watch?v=s9iTE5aqiac" title="video 2017-04-24">Шаблонизаторы - Сергей Бережной</a></li>
               <li><a class="article__dom" href="https://frontender.info/dom/" title="2017-04-24">Что такое DOM?</a></li>
               <li><a class="article__gulp" href="https://frontender.info/no-need-to-grunt-take-a-gulp-of-fresh-air/#gulpkakglotoksvezhegovozduhaposlegrunt" title="2017-04-24">Gulp — как глоток свежего воздуха после Grunt</a></li>
               <li><a href="http://site4business.net/css/kak-podklyuchit-shrift.html">Как подключить шрифт на сайт: 3 разных способа + готовый CSS шаблон</a></li>
