--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a class="video__sass" href="https://www.youtube.com/watch?v=H4cG4tbc-xQ&t=69s" title="video 2017-05-03">Sass для самых маленьких - подробное руководство</a></li>
               <li><a class="video__templates" href="https://www.youtube.com/watch?v=VwzcEEAfNCs"  title="video 2017-04-30">019. Шаблонизаторы (templates) - Сергей Бережной</a></li>
               <li><a href="http://krekotun.ru/ui-developer-skills#templates" title="2017-04-24">Что должен знать HTML-верстальщик?</a></li>
               <li><a class="article__nodejs" href="http://blog.teamtreehouse.com/install-node-js-npm-windows">How to Install Node.js® and NPM on Windows</a></li>
