--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div class="web schools">
         <h2>Info</h2>
         <ul>
+          <li><a href="https://www.npmjs.com/package/generator-man" title="2017-05-04">generator-man</a></li>
           <li><a href="http://kenwheeler.github.io/slick/" title="2017-05-03">Slick - the last carousel you'll ever need</a></li>
           <li><a href="https://mozilla.github.io/nunjucks/templating.html" title="2017-05-03">Nunjucks templating</a></li>
           <li><a href="http://nicothin.github.io/sublime-text/sublime-text-3-hotkeys.html" title="2017-04-26">Шпаргалка ниндзя Sublime Text 3</a></li>
