--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
       <div class="web schools">
         <h2>Info</h2>
         <ul>
+          <li><a href="https://greensock.com/" title="2017-05-06">GreenSock Animation Platform</a></li>
           <li><a href="https://www.npmjs.com/package/generator-man" title="2017-05-04">Generator-man</a></li>
-          <li><a href="http://kenwheeler.github.io/slick/" title="2017-05-03">Slick - the last carousel you'll ever need</a></li>
+          <li><a href="http://kenwheeler.github.io/slick/" title="2017-05-03">Slick - the last carousel you'll ever need</a>
+            <ul>
+            <li><a href="https://github.com/kenwheeler/slick/">Slick - settings</a></li>
+            </ul>
+            </li>
           <li><a href="https://mozilla.github.io/nunjucks/templating.html" title="2017-05-03">Nunjucks templating</a></li>
           <li><a href="http://nicothin.github.io/sublime-text/sublime-text-3-hotkeys.html" title="2017-04-26">Шпаргалка ниндзя Sublime Text 3</a></li>
           <li><a href="https://www.fontsquirrel.com/">fontsquirrel (Шрифты)</a></li>
@@ -81,6 +86,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned"><a href="https://habrahabr.ru/post/144466/">Greensock: анимация на JavaScript</a></li>
+              <li><a href="https://ihatetomatoes.net/get-greensock-101/">GreenSock 101</a></li>
+              <li class="not-learned videos"><a href="https://www.youtube.com/watch?v=sXJKg8SUSLI" title="YouTube">Sequence JavaScript Animations Like a Pro with TimelineLite</a></li>
+              <li class="not-learned"><a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/meta"><-meta-></a></li>
               <li><a class="animation" href="https://habrahabr.ru/post/144208/">Greensock — теперь и для JavaScript</a></li>
               <li><a class="video__sass" href="https://www.youtube.com/watch?v=H4cG4tbc-xQ&t=69s" title="video 2017-05-03">Sass для самых маленьких - подробное руководство</a></li>
               <li><a class="video__templates" href="https://www.youtube.com/watch?v=VwzcEEAfNCs"  title="video 2017-04-30">019. Шаблонизаторы (templates) - Сергей Бережной</a></li>
