--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div class="web schools">
         <h2>Info</h2>
         <ul>
+          <li><a href="https://imageoptim.com/mozjpeg" title="2017-05-09">JPEG and PNG compressors with special secret artisan-crafted settings</a></li>
           <li><a href="https://greensock.com/" title="2017-05-06">GreenSock Animation Platform</a></li>
           <li><a href="https://www.npmjs.com/package/generator-man" title="2017-05-04">Generator-man</a></li>
           <li><a href="http://kenwheeler.github.io/slick/" title="2017-05-03">Slick - the last carousel you'll ever need</a>
@@ -86,6 +87,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned"><a href="https://www.zachleat.com/web/webp/">Wait, WebP is actually worth it.—zachleat.com</a></li>
               <li class="not-learned"><a href="https://habrahabr.ru/post/144466/">Greensock: анимация на JavaScript</a></li>
               <li><a href="https://ihatetomatoes.net/get-greensock-101/">GreenSock 101</a></li>
               <li class="not-learned videos"><a href="https://www.youtube.com/watch?v=sXJKg8SUSLI" title="YouTube">Sequence JavaScript Animations Like a Pro with TimelineLite</a></li>
