--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
       <div class="web schools">
         <h2>Info</h2>
         <ul>
-          <li><a href="https://imageoptim.com/mozjpeg" title="2017-05-09">JPEG and PNG compressors with special secret artisan-crafted settings</a></li>
+          <li><a href="https://imageoptim.com/mozjpeg" title="2017-05-09">JPEG and PNG compressors with special secret artisan-crafted settings</a>
+            <ul>
+              <li><a href="https://calendar.perfplanet.com/2014/mozjpeg-3-0/">MozJPEG features</a></li>
+            </ul>
+          </li>
           <li><a href="https://greensock.com/" title="2017-05-06">GreenSock Animation Platform</a></li>
           <li><a href="https://www.npmjs.com/package/generator-man" title="2017-05-04">Generator-man</a></li>
           <li><a href="http://kenwheeler.github.io/slick/" title="2017-05-03">Slick - the last carousel you'll ever need</a>
