--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <div class="web schools">
         <h2>Info</h2>
         <ul>
+          <li><a href="https://habrahabr.ru/company/netologyru/blog/328426/">Как стать веб-разработчиком в 2017 году — план действий</a></li>
+          <li><a href="http://mynameismatthieu.com/WOW/">wow-js</a></li>
           <li><a href="https://imageoptim.com/mozjpeg" title="2017-05-09">JPEG and PNG compressors with special secret artisan-crafted settings</a>
             <ul>
               <li><a href="https://calendar.perfplanet.com/2014/mozjpeg-3-0/">MozJPEG features</a></li>
@@ -91,6 +93,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a href="https://habrahabr.ru/company/alconost/blog/324048/">Я — самозванец</a></li>
               <li class="not-learned"><a href="https://www.zachleat.com/web/webp/">Wait, WebP is actually worth it.—zachleat.com</a></li>
               <li class="not-learned"><a href="https://habrahabr.ru/post/144466/">Greensock: анимация на JavaScript</a></li>
               <li><a href="https://ihatetomatoes.net/get-greensock-101/">GreenSock 101</a></li>
