add animation setion

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="#log">Log</a>
           <a href="#websites">Websites</a>
           <a href="#learning">Learning</a>
+          <a href="#animation">Animation</a>
         </nav>
       </header>
       <!--END header-->
@@ -93,6 +94,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned"><a href="http://css-live.ru/articles-css/svojstva-dlya-vyravnivaniya-vsego-i-ix-novye-tajny.html">Свойства для выравнивания всего и их новые тайны</a></li>
               <li><a href="https://habrahabr.ru/company/alconost/blog/324048/">Я — самозванец</a></li>
               <li class="not-learned"><a href="https://www.zachleat.com/web/webp/">Wait, WebP is actually worth it.—zachleat.com</a></li>
               <li class="not-learned"><a href="https://habrahabr.ru/post/144466/">Greensock: анимация на JavaScript</a></li>
@@ -480,6 +482,20 @@
         </details>
       </section>
       <!--END log-->
+      
+      <section id="animation" class="section">
+        <h2>Animation</h2>
+        <h3>Компьютерная имитация движения с помощью изменения (и перерисовки) формы обьектов или показа последовательных изображений с фазами движения.</h3>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li class="animation-list"><a href="https://youtu.be/b_3lqYrcY-4?t=57m2s" title="sPiter CSS (2017-05-17)">Надоела анимация?</a></li> 
+          <li class="animation-list"><a href="http://cubic-bezier.com/#.17,.67,.83,.67">Cubic-bezier</a></li> 
+          <li class="animation-list"><a href="http://easings.net/ru">Шпаргалка функций плавности (easing)</a></li>          
+        </ul>
+      </section>
 
       <!--BEGIN websites-->
       <section id="websites" class="section">
