--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <section>
         <h2>YouTube</h2>
         <ul>
+          <li class="youtube1"><a href="https://www.youtube.com/watch?v=30O4xKk-aUY">Welcome To Level Up Tutorials</a></li>
           <li class="youtube1">
             <a href="https://www.youtube.com/channel/UC7f5bVxWsm3jlZIPDzOMcAg">Хауди Хо™ - Просто о мире IT!</a></li>
         </ul>
@@ -94,6 +95,11 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+
+              <li><a href="http://nicothin.pro/page/css-solutions">Советы по написанию современного CSS</a></li>
+              <li class="not-learned"><a href="http://kizu.ru/en/blog/label-to-input/">Label-to-In­put States</a></li>
+              <li class="not-learned flexbox1"><a href="https://habrahabr.ru/post/329820/">11 вещей, которые я узнал, читая спецификацию flexbox</a></li>
+              <li class="not-learned grid1"><a href="http://varun.ca/css-grid/">Learning CSS Grids</a></li>
               <li class="not-learned"><a href="http://css-live.ru/articles-css/svojstva-dlya-vyravnivaniya-vsego-i-ix-novye-tajny.html">Свойства для выравнивания всего и их новые тайны</a></li>
               <li><a href="https://habrahabr.ru/company/alconost/blog/324048/">Я — самозванец</a></li>
               <li class="not-learned"><a href="https://www.zachleat.com/web/webp/">Wait, WebP is actually worth it.—zachleat.com</a></li>
@@ -487,11 +493,8 @@
         <h2>Animation</h2>
         <h3>Компьютерная имитация движения с помощью изменения (и перерисовки) формы обьектов или показа последовательных изображений с фазами движения.</h3>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li class="animation-list"><a href="https://youtu.be/b_3lqYrcY-4?t=57m2s" title="sPiter CSS (2017-05-17)">Надоела анимация?</a></li> 
+
+          <li class="animation-list"><a href="https://youtu.be/b_3lqYrcY-4?t=57m2s" title="sPiter CSS (2017-05-17)">Надоела анимация? <sup>Youtube</sup></a></li> 
           <li class="animation-list"><a href="http://cubic-bezier.com/#.17,.67,.83,.67">Cubic-bezier</a></li> 
           <li class="animation-list"><a href="http://easings.net/ru">Шпаргалка функций плавности (easing)</a></li>          
         </ul>
