--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <div class="web schools">
         <h2>Info</h2>
         <ul>
+          <li><a href="https://docs.emmet.io/cheat-sheet/">Emmet Documentation Cheat Sheet</a></li>
           <li><a href="https://habrahabr.ru/company/netologyru/blog/328426/">Как стать веб-разработчиком в 2017 году — план действий</a></li>
           <li><a href="http://mynameismatthieu.com/WOW/">wow-js</a></li>
           <li><a href="https://imageoptim.com/mozjpeg" title="2017-05-09">JPEG and PNG compressors with special secret artisan-crafted settings</a>
@@ -95,7 +96,9 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
-
+              <li><a href="https://dou.ua/lenta/articles/fundamental-knowledge-is-a-must/" title="2017-07-04">Как выжить в круговороте современного IT, или Зачем изучать основы</a></li>
+              <li class="not-learned bem1"><a href="http://nicothin.github.io/idiomatic-pre-CSS/#bem">Как работать с CSS-препроцессорами и БЭМ</a></li>
+              <li class="not-learned"><a href="http://css.yoksel.ru/specifity/">Сколько весят селекторы?</a></li>
               <li><a href="http://nicothin.pro/page/css-solutions">Советы по написанию современного CSS</a></li>
               <li class="not-learned"><a href="http://kizu.ru/en/blog/label-to-input/">Label-to-In­put States</a></li>
               <li class="not-learned flexbox1"><a href="https://habrahabr.ru/post/329820/">11 вещей, которые я узнал, читая спецификацию flexbox</a></li>
